# issy

./: README.md  benchmark-solvers.sh  issy.cabal
src/issy/: Main.hs
src/lib/Issy/: Config.hs
src/lib/Issy/Logic/: SMT.hs
test/: Main.hs
test/Test/: TestUtils.hs
test/Test/Integration/: CompileSpec.hs  ParsePrintSpec.hs  SolveSpec.hs
test/Test/Unit/Compiler/: LexerSpec.hs
test/Test/Unit/Logic/: FOLSpec.hs
test/Test/Unit/Parsers/: LLIssyFormatSpec.hs
