name:                issy
version:             1.0.0.0
license:             PublicDomain
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts
    -static
-----optl-static

  build-depends:
      base
    , containers
    , process
    , hanoi
    , finite
    , tsl-parser

  exposed-modules:
      Compiler
    , Compiler.Base
    , Compiler.Lexer
    , Issy
    , Issy.Base.Variables
    , Issy.Config
    , Issy.Logic.FOL
    , Issy.Specification

  other-modules:
      Compiler.Checker
    , Compiler.Parser
    , Compiler.Writer
    , Issy.Base.Locations
    , Issy.Base.Objectives
    , Issy.Base.SymbolicState
    , Issy.Extractors.MuCLP
    , Issy.Extractors.TSLT
    , Issy.Logic.CHC
    , Issy.Logic.RPLTL
    , Issy.Logic.SMT
    , Issy.Logic.Temporal
    , Issy.Logic.TSLMT
    , Issy.Monitor
    , Issy.Monitor.Fixpoints
    , Issy.Monitor.Formula
    , Issy.Monitor.Monitor
    , Issy.Monitor.Postprocess
    , Issy.Monitor.Propagation
    , Issy.Monitor.Rules
    , Issy.Monitor.State
    , Issy.Monitor.Successors
    , Issy.Parsers.LLIssyFormat
    , Issy.Parsers.RPG
    , Issy.Parsers.SExpression
    , Issy.Parsers.SMTLib
    , Issy.Parsers.SMTLibLexer
    , Issy.Parsers.TSLMT
    , Issy.Printers.LLIssyFormat
    , Issy.Printers.RPG
    , Issy.Printers.SymbolicGame
    , Issy.Printers.SMTLib
    , Issy.Products.RPGMonitor
    , Issy.Products.SGMonitor
    , Issy.Products.SymbolicGames
    , Issy.RPG
    , Issy.Solver.Acceleration
    , Issy.Solver.Acceleration.Heuristics
    , Issy.Solver.Acceleration.LemmaFinding
    , Issy.Solver.Acceleration.LoopScenario
    , Issy.Solver.Acceleration.MDAcceleration
    , Issy.Solver.Acceleration.OuterFixPoint
    , Issy.Solver.Acceleration.Strengthening
    , Issy.Solver.Acceleration.UFLAcceleration
    , Issy.Solver.Attractor
    , Issy.Solver.GameInterface
    , Issy.Solver.ObjectiveSolver
    , Issy.Solver.Synthesis
    , Issy.Statistics
    , Issy.SymbolicArena
    , Issy.Translation
    , Issy.Translation.DOA
    , Issy.Translation.LTL2DOA
    , Issy.Translation.RPLTL2SG
    , Issy.Translation.TSL2RPG
    , Issy.Utils.Extra
    , Issy.Utils.Logging
    , Issy.Utils.OpenList

  hs-source-dirs:
      src/lib

  default-language:
    Haskell2010

executable issy

  ghc-options:
    -Wall
    -Wno-name-shadowing
-----optl-static

  main-is:
    Main.hs

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/issy

  default-language:
    Haskell2010

test-suite issy-test

  type:
    exitcode-stdio-1.0

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -threaded
    -rtsopts
    -with-rtsopts=-N

  main-is:
    Main.hs

  other-modules:
      Test.Integration.CompileSpec
    , Test.Integration.ParsePrintSpec
    , Test.Integration.SolveSpec
    , Test.Unit.Compiler.LexerSpec
    , Test.Unit.Logic.FOLSpec
    , Test.Unit.Parsers.LLIssyFormatSpec
    , Test.TestUtils

  build-depends:
      base
    , issy
    , tasty
    , tasty-hunit
    , containers
    , process

  hs-source-dirs:
    test

  default-language:
    Haskell2010
